--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">t</h2>
+        <h2 class="card-title">Christian</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: t</li>
-            <li class="list-group-item">Email: <a href="mailto:t">t</a></li>
-            <li class="list-group-item">Office number: t</li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:C@gmail.com">C@gmail.com</a></li>
+            <li class="list-group-item">Office number: 274</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Stevee</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:steve@gmail.com">steve@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/steve" target="_blank" rel="noopener noreferrer">steve</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">joe</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:joe@gmail.com">joe@gmail.com</a></li>
+            <li class="list-group-item">School: UM</li>
         </ul>
     </div>
 </div>
