--- a/output/team.html
+++ b/output/team.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Team</title>
+    <link rel = "stylesheet" href = "../assets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -23,42 +24,19 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                <div class="card employee-card">
+                <link rel = "stylesheet" href = "../assets/style.css">
+
+<div class="manager card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Christian</h2>
+        <h2 class="card-title"></h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:C@gmail.com">C@gmail.com</a></li>
-            <li class="list-group-item">Office number: 274</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Stevee</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:steve@gmail.com">steve@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/steve" target="_blank" rel="noopener noreferrer">steve</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">joe</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:joe@gmail.com">joe@gmail.com</a></li>
-            <li class="list-group-item">School: UM</li>
+            <!-- based code enables us to dynamically create html based upon role selection -->
+            <li class="list-group-item">ID: </li>
+            <li class="list-group-item">Email: <a href="mailto:"></a></li>
+            <li class="list-group-item">Office number: </li>
         </ul>
     </div>
 </div>
